--- a/finalproject/eastern.html
+++ b/finalproject/eastern.html
@@ -20,186 +20,172 @@
         </a>
     </div>
     <div class="container">
-        <div class="cardContainer">
-            <div class="card" onclick="flipped(0, document.getElementById('hawkstats'),91)">
-                <div class="front hawksfront">
-                    <h2>Atlanta Hawks</h2>
-                    <img class="icons" src="images/hawksicon.png">
-                </div>
-                <div class="back hawksback">
-                    <div class="statInfo" id="hawkstats">
-                    </div>
+
+        <div class="card" onclick="flipped(0, document.getElementById('hawkstats'),91)">
+            <div class="front hawksfront">
+                <h2>Atlanta Hawks</h2>
+                <img class="icons" src="images/hawksicon.png">
+            </div>
+            <div class="back hawksback">
+                <div class="statInfo" id="hawkstats">
                 </div>
             </div>
         </div>
-        <div class="cardContainer">
-            <div class="card" onclick="flipped(1, document.getElementById('celticstats'),82)">
-                <div class="front celticsfront">
-                    <h2>Boston Celtics</h2>
-                    <img class="icons" src="images/celticsicon.png">
-                </div>
-                <div class="back celticsback">
-                    <div class="statInfo" id="celticstats">
-                    </div>
+
+        <div class="card" onclick="flipped(1, document.getElementById('celticstats'),82)">
+            <div class="front celticsfront">
+                <h2>Boston Celtics</h2>
+                <img class="icons" src="images/celticsicon.png">
+            </div>
+            <div class="back celticsback">
+                <div class="statInfo" id="celticstats">
                 </div>
             </div>
         </div>
-        <div class="cardContainer">
-            <div class="card" onclick="flipped(2, document.getElementById('netstats'),84)">
-                <div class="front netsfront">
-                    <h2>Brooklyn Nets</h2>
-                    <img class="icons" src="images/nets.png">
-                </div>
-                <div class="back netsback">
-                    <div class="statInfo" id="netstats">
-                    </div>
+
+        <div class="card" onclick="flipped(2, document.getElementById('netstats'),84)">
+            <div class="front netsfront">
+                <h2>Brooklyn Nets</h2>
+                <img class="icons" src="images/nets.png">
+            </div>
+            <div class="back netsback">
+                <div class="statInfo" id="netstats">
                 </div>
             </div>
         </div>
-        <div class="cardContainer">
-            <div class="card" onclick="flipped(3, document.getElementById('hornetstats'),93)">
-                <div class="front hornetsfront">
-                    <h2>Charlotte Hornets</h2>
-                    <img class="icons" src="images/hornetsicon.png">
-                </div>
-                <div class="back hornetsback">
-                    <div class="statInfo" id="hornetstats">
-                    </div>
+
+        <div class="card" onclick="flipped(3, document.getElementById('hornetstats'),93)">
+            <div class="front hornetsfront">
+                <h2>Charlotte Hornets</h2>
+                <img class="icons" src="images/hornetsicon.png">
+            </div>
+            <div class="back hornetsback">
+                <div class="statInfo" id="hornetstats">
                 </div>
             </div>
         </div>
-        <div class="cardContainer">
-            <div class="card" onclick="flipped(4, document.getElementById('bullstats'),89)">
-                <div class="front bullsfront">
-                    <h2>Chicago Bulls</h2>
-                    <img class="icons" src="images/bullsicon.png">
-                </div>
-                <div class="back bullsback">
-                    <div class="statInfo" id="bullstats">
-                    </div>
+
+        <div class="card" onclick="flipped(4, document.getElementById('bullstats'),89)">
+            <div class="front bullsfront">
+                <h2>Chicago Bulls</h2>
+                <img class="icons" src="images/bullsicon.png">
+            </div>
+            <div class="back bullsback">
+                <div class="statInfo" id="bullstats">
                 </div>
             </div>
         </div>
-        <div class="cardContainer">
-            <div class="card" onclick="flipped(5, document.getElementById('cavstats'),86)">
-                <div class="front cavsfront">
-                    <h2>Cleveland Cavaliers</h2>
-                    <img class="icons" src="images/cavsicon.png">
-                </div>
-                <div class="back cavsback">
-                    <div class="statInfo" id="cavstats">
-                    </div>
+
+        <div class="card" onclick="flipped(5, document.getElementById('cavstats'),86)">
+            <div class="front cavsfront">
+                <h2>Cleveland Cavaliers</h2>
+                <img class="icons" src="images/cavsicon.png">
+            </div>
+            <div class="back cavsback">
+                <div class="statInfo" id="cavstats">
                 </div>
             </div>
         </div>
-        <div class="cardContainer">
-            <div class="card" onclick="flipped(6, document.getElementById('pistonstats'),88)">
-                <div class="front pistonsfront">
-                    <h2>Detroit Pistons</h2>
-                    <img class="icons" src="images/pistonsicon.png">
-                </div>
-                <div class="back pistonsback">
-                    <div class="statInfo" id="pistonstats">
-                    </div>
+
+        <div class="card" onclick="flipped(6, document.getElementById('pistonstats'),88)">
+            <div class="front pistonsfront">
+                <h2>Detroit Pistons</h2>
+                <img class="icons" src="images/pistonsicon.png">
+            </div>
+            <div class="back pistonsback">
+                <div class="statInfo" id="pistonstats">
                 </div>
             </div>
         </div>
-        <div class="cardContainer">
-            <div class="card" onclick="flipped(7, document.getElementById('pacerstats'),87)">
-                <div class="front pacersfront">
-                    <h2>Indiana Pacers</h2>
-                    <img class="icons" src="images/pacersicon.png">
-                </div>
-                <div class="back pacersback">
-                    <div class="statInfo" id="pacerstats">
-                    </div>
+
+        <div class="card" onclick="flipped(7, document.getElementById('pacerstats'),87)">
+            <div class="front pacersfront">
+                <h2>Indiana Pacers</h2>
+                <img class="icons" src="images/pacersicon.png">
+            </div>
+            <div class="back pacersback">
+                <div class="statInfo" id="pacerstats">
                 </div>
             </div>
         </div>
-        <div class="cardContainer">
-            <div class="card" onclick="flipped(8, document.getElementById('heatstats'),92)">
-                <div class="front heatfront">
-                    <h2>Miami Heat</h2>
-                    <img class="icons" src="images/heaticon.png">
-                </div>
-                <div class="back heatback">
-                    <div class="statInfo" id="heatstats">
-                    </div>
+
+        <div class="card" onclick="flipped(8, document.getElementById('heatstats'),92)">
+            <div class="front heatfront">
+                <h2>Miami Heat</h2>
+                <img class="icons heatpic" src="images/heaticon.png">
+            </div>
+            <div class="back heatback">
+                <div class="statInfo" id="heatstats">
                 </div>
             </div>
         </div>
-        <div class="cardContainer">
-            <div class="card" onclick="flipped(9, document.getElementById('buckstats'),90)">
-                <div class="front bucksfront">
-                    <h2>Milwaukie Bucks</h2>
-                    <img class="icons" src="images/bucksicon.png">
-                </div>
-                <div class="back bucksback">
-                    <div class="statInfo" id="buckstats">
-                    </div>
+
+        <div class="card" onclick="flipped(9, document.getElementById('buckstats'),90)">
+            <div class="front bucksfront">
+                <h2>Milwaukie Bucks</h2>
+                <img class="icons buckpic" src="images/bucksicon.png">
+            </div>
+            <div class="back bucksback">
+                <div class="statInfo" id="buckstats">
                 </div>
             </div>
         </div>
-        <div class="cardContainer">
-            <div class="card" onclick="flipped(10, document.getElementById('knickstats'),83)">
-                <div class="front knicksfront">
-                    <h2>New York Knicks</h2>
-                    <img class="icons" src="images/knicksicon.png">
-                </div>
-                <div class="back knicksback">
-                    <div class="statInfo" id="knickstats">
-                    </div>
+
+        <div class="card" onclick="flipped(10, document.getElementById('knickstats'),83)">
+            <div class="front knicksfront">
+                <h2>New York Knicks</h2>
+                <img class="icons" src="images/knicksicon.png">
+            </div>
+            <div class="back knicksback">
+                <div class="statInfo" id="knickstats">
                 </div>
             </div>
         </div>
-        <div class="cardContainer">
-            <div class="card" onclick="flipped(11, document.getElementById('magicstats'),95)">
-                <div class="front magicfront">
-                    <h2>Orlando Magic</h2>
-                    <img class="icons" src="images/magicicon.png">
-                </div>
-                <div class="back magicback">
-                    <div class="statInfo" id="magicstats">
-                    </div>
+
+        <div class="card" onclick="flipped(11, document.getElementById('magicstats'),95)">
+            <div class="front magicfront">
+                <h2>Orlando Magic</h2>
+                <img class="icons" src="images/magicicon.png">
+            </div>
+            <div class="back magicback">
+                <div class="statInfo" id="magicstats">
                 </div>
             </div>
         </div>
-        <div class="cardContainer">
-            <div class="card" onclick="flipped(12, document.getElementById('sixerstats'),85)">
-                <div class="front sixersfront">
-                    <h2>Philadelphia 76ers</h2>
-                    <img class="icons" src="images/76ersicon.png">
-                </div>
-                <div class="back sixersback">
-                    <div class="statInfo" id="sixerstats">
-                    </div>
+
+        <div class="card" onclick="flipped(12, document.getElementById('sixerstats'),85)">
+            <div class="front sixersfront">
+                <h2>Philadelphia 76ers</h2>
+                <img class="icons" src="images/76ersicon.png">
+            </div>
+            <div class="back sixersback">
+                <div class="statInfo" id="sixerstats">
                 </div>
             </div>
         </div>
-        <div class="cardContainer">
-            <div class="card" onclick="flipped(13, document.getElementById('raptorstats'),81)">
-                <div class="front raptorsfront">
-                    <h2>Toronto Raptors</h2>
-                    <img class="icons" src="images/raptorsicon.png">
-                </div>
-                <div class="back raptorsback">
-                    <div class="statInfo" id="raptorstats">
-                    </div>
+
+        <div class="card" onclick="flipped(13, document.getElementById('raptorstats'),81)">
+            <div class="front raptorsfront">
+                <h2>Toronto Raptors</h2>
+                <img class="icons" src="images/raptorsicon.png">
+            </div>
+            <div class="back raptorsback">
+                <div class="statInfo" id="raptorstats">
                 </div>
             </div>
         </div>
-        <div class="cardContainer">
-            <div class="card" onclick="flipped(14, document.getElementById('wizardstats'),94)">
-                <div class="front wizardsfront">
-                    <h2>Washington Wizards</h2>
-                    <img class="icons" src="images/wizardsicon.png">
-                </div>
-                <div class="back wizardsback">
-                    <div class="statInfo" id="wizardstats">
-                    </div>
+
+        <div class="card" onclick="flipped(14, document.getElementById('wizardstats'),94)">
+            <div class="front wizardsfront">
+                <h2>Washington Wizards</h2>
+                <img class="icons" src="images/wizardsicon.png">
+            </div>
+            <div class="back wizardsback">
+                <div class="statInfo" id="wizardstats">
                 </div>
             </div>
         </div>
+    </div>
     </div>
     </div>
     <script src="scripts/flipped.js"></script>
