--- a/finalproject/finalproject.html
+++ b/finalproject/finalproject.html
@@ -14,7 +14,7 @@
 
 <body>
     <div class="header">
-        <img id="nbalogo" src="images/nbalogo.png">
+        <!-- <img id="nbalogo" src="images/nbalogo.png"> -->
         <h1>2018 - 2019 NBA Stats</h1>
     </div>
     <div class="container">
@@ -29,9 +29,7 @@
             </a>
         </div>
     </div>
-    <script src="scripts/collapsable.js"></script>
-    <script src="scripts/searching.js"></script>
-    <script src="scripts/basketballdata.js"></script>
+
 </body>
 
 </html>
