--- a/finalproject/western.html
+++ b/finalproject/western.html
@@ -8,7 +8,7 @@
     <title>Western Conference</title>
     <meta name="Western Conference" content="Western Conference Teams">
     <link rel="stylesheet" href="styles/teamsstyle.css">
-    <link href="https://fonts.googleapis.com/css?family=Permanent+Marker%7cMarkazi+Text%7cOverpass:900i"
+    <link href="https://fonts.googleapis.com/css?family=Permanent+Marker%7cMarkazi+Text%7cOverpass:900i%7cShadows+Into+Light"
         rel="stylesheet">
 </head>
 
@@ -38,6 +38,7 @@
             </div>
             <div class="back mavback">
                 <div class="statInfo" id="mavstats">
+                    
                 </div>
             </div>
         </div>
