--- a/finalproject/finalproject.html
+++ b/finalproject/finalproject.html
@@ -14,7 +14,6 @@
 
 <body>
     <div class="header">
-        <!-- <img id="nbalogo" src="images/nbalogo.png"> -->
         <h1>2018 - 2019 NBA Stats</h1>
     </div>
     <div class="container">
@@ -28,6 +27,11 @@
                 <h1>Eastern Conference</h1>
             </a>
         </div>
+        <div class="allstar">
+                <a href="allstar.html">
+                    <h1>All Star Weekend</h1>
+                </a>
+            </div>
     </div>
 
 </body>
