--- a/finalproject/allstar.html
+++ b/finalproject/allstar.html
@@ -34,6 +34,25 @@
                 allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
                 allowfullscreen></iframe>
         </div>
+        <div class="skills">
+            <h3>Skills Challange</h3>
+            <iframe class="videos" src="https://www.youtube.com/embed/hw4pgmtDQi8" frameborder="0"
+                allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen></iframe>
+        </div>
+        <div class="dunk">
+            <h3>Dunk Contest</h3>
+            <iframe class="videos" src="https://www.youtube.com/embed/PWWUHblOmm0" frameborder="0"
+                allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen></iframe>
+        </div>
+        <div class="game">
+            <h3>Game Highlights</h3>
+            <iframe class="videos" src="https://www.youtube.com/embed/H1JcEsFU07s" frameborder="0"
+                allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen></iframe>
+        </div>
+    </div>
     </div>
     <script src="scripts/hamburger.js"></script>
 </body>
