--- a/finalproject/eastern.html
+++ b/finalproject/eastern.html
@@ -25,7 +25,7 @@
         <div id="menuLinks">
             <a href="eastern.html">Eastern</a>
             <a href="western.html">Western</a>
-            <a href="#">Highlights</a>
+            <a href="allstar.html">All Star</a>
         </div>
     </div>
     <div id="container">
