--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                 <div class="topic14 topics">
                         <h3>Final</h3>
                         <p>Final Project</p>
-                        <button><a href="#">Not Yet Page</a></button>
+                        <button><a href="finalproject/finalproject.html">Example Page</a></button>
                         <button><a href="#">Not Yet Code</a></button>
                 </div>
         </div>
