--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                         <h3>Final</h3>
                         <p>Final Project</p>
                         <button><a href="finalproject/finalproject.html">Example Page</a></button>
-                        <button><a href="#">Not Yet Code</a></button>
+                        <button><a href="https://github.com/ingebrigtsen-jessica/ingebrigtsen-jessica.github.io/tree/master/finalproject">Example Code</a></button>
                 </div>
         </div>
 </body>
