--- a/finalproject/allstar.html
+++ b/finalproject/allstar.html
@@ -15,7 +15,7 @@
 <body>
     <div class="header">
         <a href="finalproject.html">
-            <h1> 2019 All Star Weekend</h1>
+            <h1> 2019 All Star Weekend Highlights</h1>
         </a>
     </div>
     <div class="nav">
