--- a/finalproject/finalproject.html
+++ b/finalproject/finalproject.html
@@ -29,7 +29,7 @@
         </div>
         <div class="allstar">
                 <a href="allstar.html">
-                    <h1>All Star Weekend</h1>
+                    <h1>All Star Weekend Highlights</h1>
                 </a>
             </div>
     </div>
